--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         <p>Ce diplôme atteste de vos compétences et de votre succès dans la formation, et vous ouvre de nombreuses opportunités professionnelles.</p>
         
         <!-- Affichage du PDF dans la page -->
-        <iframe src="https://user93-pro.github.io/felicitations/dl.pdf" width="100%" height="600px">
+        <iframe src="https://user93-pro.github.io/Felicitation/dl.pdf" width="100%" height="600px">
             Votre navigateur ne supporte pas l'affichage des PDF. Vous pouvez télécharger le fichier en cliquant sur le lien suivant :
-            <a href="https://user93-pro.github.io/felicitations/dl.pdf">Télécharger le diplôme</a>.
+            <a href="https://user93-pro.github.io/Felicitation/dl.pdf">Télécharger le diplôme</a>.
         </iframe>
 
         <!-- Lien de téléchargement du PDF -->
-        <a href="https://user93-pro.github.io/felicitations/dl.pdf" class="btn" download>Télécharger votre diplôme</a>
+        <a href="https://user93-pro.github.io/Felicitation/dl.pdf" class="btn" download>Télécharger votre diplôme</a>
     </div>
 </div>
 
